--- a/examples/visualizer/package.json
+++ b/examples/visualizer/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/romseguy/react2tree",
   "dependencies": {
     "react2tree": "^1.0.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "d3": "^3.5.6",
+    "d3-state-visualizer": "^0.3.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
