--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -22,8 +22,9 @@
   },
   "homepage": "https://github.com/romseguy/react2tree",
   "dependencies": {
-    "react2tree": "^1.0.0",
-    "react": "^0.13.3"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react2tree": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
