--- a/package.json
+++ b/package.json
@@ -32,19 +32,18 @@
   "devDependencies": {
     "babel": "^5.5.8",
     "babel-core": "^5.6.18",
-    "babel-eslint": "^3.1.15",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.1.4",
-    "eslint": "^0.23",
-    "eslint-config-airbnb": "0.0.6",
-    "eslint-plugin-react": "^2.3.0",
-    "expect": "^1.6.0",
-    "isparta": "^3.0.3",
-    "mocha": "^2.2.5",
+    "eslint": "^1.6",
+    "eslint-config-airbnb": "0.1.0",
+    "eslint-plugin-react": "^3.5.1",
     "rimraf": "^2.3.4",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.14.0",
+    "react-addons-test-utils": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
