--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "build": "babel src --out-dir lib",
     "build:umd": "webpack src/index.js dist/react2tree.js && NODE_ENV=production webpack src/index.js dist/react2tree.min.js",
     "lint": "eslint src examples",
-    "test": "NODE_ENV=test mocha",
-    "test:watch": "NODE_ENV=test mocha --watch",
-    "test:cov": "babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha",
     "prepublish": "npm run lint && npm run clean && npm run build && npm run build:umd"
   },
   "repository": {
@@ -30,13 +27,16 @@
   },
   "homepage": "https://github.com/romseguy/react2tree",
   "devDependencies": {
-    "babel": "^5.5.8",
-    "babel-core": "^5.6.18",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.1.4",
-    "eslint": "^1.6",
-    "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-react": "^3.5.1",
+    "babel-cli": "^6.3.15",
+    "babel-core": "^6.1.20",
+    "babel-eslint": "^5.0.0-beta4",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015-loose": "^6.1.3",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "eslint": "^0.23",
+    "eslint-config-airbnb": "0.0.6",
+    "eslint-plugin-react": "^3.6.3",
     "rimraf": "^2.3.4",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
